--- a/stockmarket/public/stylesheets/style.css
+++ b/stockmarket/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,12 +24,15 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
 	line-height: 1;
+	background-color: #DCDBD9;
+	color: #2C2C2C;
+	font: normal 100% Cambria, Georgia, serif;
 }
 ol, ul {
 	list-style: none;
@@ -45,4 +48,27 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+h1{
+	font-size: 1.5em; /* 24 / 16 */
+	font-style: italic;
+	font-weight: normal;
+}
+
+main{
+	display: flex;
+	align-items: center;
+}
+
+aside{
+	display: flex;
+	flex-direction: column;
+}
+
+.stockList{
+	display: flex;
+}
+section{
+	display: flex;
 }
